--- a/test/blog.html
+++ b/test/blog.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="blog.css"></head>
 <body>
 	<div class="header">
-		<img src="images/头像.jpg">
+		<img src="images/头像.png">
 		<h1>张云的博客</h1>
 			<ul>
 				<li>
