--- a/test/blog.html
+++ b/test/blog.html
@@ -8,31 +8,32 @@
 	<div class="header">
 		<img src="images/头像.png">
 		<h1>张云的博客</h1>
-			<ul>
-				<li>
-					<a href="blog.html">首页</a>
-				</li>
-				<li>
-					<a href="blog.html">归档</a>
-				</li>
-				<li>
-					<a href="blog.html">关于</a>
-				</li>
-			</ul>
-			<table>
-				<tr>
-					<td>
-						<img src="images/主页.png"></td>
-					<td>
-						<img src="images/主页.png"></td>
-					<td>
-						<img src="images/主页.png"></td>
-				</tr>
-			</table>
+		<ul>
+			<li>
+				<a href="blog.html">首页</a>
+			</li>
+			<li>
+				<a href="blog.html">归档</a>
+			</li>
+			<li>
+				<a href="blog.html">关于</a>
+			</li>
+		</ul>
+		<table>
+			<tr>
+				<td>
+					<img src="images/主页.png"></td>
+				<td>
+					<img src="images/主页.png"></td>
+				<td>
+					<img src="images/主页.png"></td>
+			</tr>
+		</table>
 	</div>
 	<div class="article">
+		<div class="article1">
 		<h2>编程的首要原则(s)是什么</h2>
-		<div class="date">
+		<div class="date1">
 			<p>05月29.2016</p>
 			<p>2comments</p>
 		</div>
@@ -53,6 +54,7 @@
 				<li>它的知识结构是什么。</li>
 			</ol>
 		</div>
+		<br />
 		<p>
 			5个月过去了，这个问题到现在还有人回复，我得到了一大堆有意思的答案，忍不住翻译过来与大家分享：
 			<br />
@@ -65,8 +67,10 @@
 		<p>
 			<a href="all.html">阅读全文</a>
 		</p>
+	</div>
+	<div class=article2>
 		<h2>编程的首要原则(s)是什么</h2>
-		<div class="date">
+		<div class="date2">
 			<p>05月29.2016</p>
 			<p>2comments</p>
 		</div>
@@ -87,6 +91,7 @@
 				<li>它的知识结构是什么。</li>
 			</ol>
 		</div>
-	</article>
+	</div>
+</div>
 </body>
 </html>
