--- a/test/blog.html
+++ b/test/blog.html
@@ -46,24 +46,22 @@
 			<br />
 			作为我的学习原则的一个实践：
 		</p>
-		<div class="advice">
-			<p>8.学习一项知识，必须问自己三个重要问题：</p>
-			<ol>
-				<li>它的本质是什么。</li>
-				<li>它的第一原则是什么。</li>
-				<li>它的知识结构是什么。</li>
-			</ol>
-		</div>
+		<p id="advice">
+			8.学习一项知识，必须问自己三个重要问题：<br />		
+				1.它的本质是什么。
+				2.它的第一原则是什么。
+				3.它的知识结构是什么。
+			</p>
 		<br />
 		<p>
 			5个月过去了，这个问题到现在还有人回复，我得到了一大堆有意思的答案，忍不住翻译过来与大家分享：
 			<br />
 			1.获得最多认同的答案：
 		</p>
-		<ul id="answers">
-			<li>KISS – Keep It Simple Stupid</li>
-			<li>DRY – Don’t Repeat Yourself</li>
-		</ul>
+		<p id="answers">
+			KISS – Keep It Simple Stupid<br />
+			DRY – Don’t Repeat Yourself
+		</p>
 		<p>
 			<a href="all.html">阅读全文</a>
 		</p>
@@ -83,14 +81,12 @@
 			<br />
 			作为我的学习原则的一个实践：
 		</p>
-		<div class="advice">
-			<p>8.学习一项知识，必须问自己三个重要问题：</p>
-			<ol>
-				<li>它的本质是什么。</li>
-				<li>它的第一原则是什么。</li>
-				<li>它的知识结构是什么。</li>
-			</ol>
-		</div>
+		<p id="advice">
+			8.学习一项知识，必须问自己三个重要问题：<br />			
+				1.它的本质是什么。
+				2.它的第一原则是什么。
+				3.它的知识结构是什么。
+			</p>
 	</div>
 </div>
 </body>
